- show_style_editor:  Moved to simple module
- show_about:         Moved to simple module
- add_slider_***:     Removed "on_enter" keyword
- add_drag_***:       Removed "on_enter" keyword

Fixes:
- Logger Widgets:     can now be called asynronously #279
- Docs: draw_polygon and draw_polyline, corrected type hinting from list of floats to list of FloatList

-----------------------------------------------------------------------
 VERSION 0.4.609 (10/14/2020)
-----------------------------------------------------------------------

Decorated log: https://github.com/hoffstadt/DearPyGui/releases/tag/v0.4.609

New Commands:
- Items: Added "set_accelerator_callback" command

Changes:
- Menus: Removed tip keyword #274

-----------------------------------------------------------------------
 VERSION 0.4.605
-----------------------------------------------------------------------

Decorated log: https://github.com/hoffstadt/DearPyGui/releases/tag/v0.4.605

Updated:
- Dear Imgui:    Revert to Version 1.78

Fixes:
- File selector and dialog work again

-----------------------------------------------------------------------
 VERSION 0.4.602 (10/11/2020)
-----------------------------------------------------------------------

Decorated log: https://github.com/hoffstadt/DearPyGui/releases/tag/v0.4.602

Updated:
- Python:        Added Python 3.6 Support
- Dear Imgui:    Upgraded to Version 1.79

Fixes:
- Windows:       on_move flag was not being used
- Popup:         mouse button keyword now works

-----------------------------------------------------------------------
 VERSION 0.4.5 (10/6/2020)
-----------------------------------------------------------------------

Decorated log: https://github.com/hoffstadt/DearPyGui/releases/tag/v0.4.5

Updates:
- Stub File:      stub file is now generated automatically

Breaking Changes:
- Label Text:     changed "value" keyword to "default_value"
- Progress Bar:   changed "value" keyword to "default_value"

Fixes: